--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
-  text-align: center;
+  height:100vh;
+  width:100vw;
+  font-family:arial;
+  background-color: #f7f7f7;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style-type: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.parentWidget {
+ overflow: hidden; 
+ width:35vw;
+ /* text-align:center; */
+ position:fixed;
+ left:30%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.countryMenu {
+  padding:10px;
+  overflow: auto;
+  /* overflow: hidden; */
+  height:20vh;
+  /* padding-right:-20px; */
+  width:40%;
+  color:black;
+  left:20vw;
+  background-color: white;
+  box-shadow: 5px 10px gray;
+
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  text-align:left;
+  border:white;
+  background-color:white;
+  color:black;
+  transition-duration: 0.4s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: gainsboro;
+}
+
+input {
+  width:20vw;
+  background-color:#f7f7f7;
+}
+
+#searchBar {
+  background-color:white;
+  width:10vw;
 }
